--- a/web.config
+++ b/web.config
@@ -5,14 +5,9 @@
     </handlers>
     <rewrite>
       <rules>
-        <rule name="NodeInspector" patternSyntax="ECMAScript" stopProcessing="true">
-          <match url="^app.js\/debug[\/]?" />
-        </rule>
-        <rule name="DynamicContent">
-          <conditions>
-            <add input="{{REQUEST_FILENAME}}" matchType="IsFile" negate="True"/>
-          </conditions>
-          <action type="Rewrite" url="app.js"/>
+        <rule name="NodeApp" patternSyntax="Wildcard">
+          <match url="*" />
+          <action type="Rewrite" url="server.js"/>
         </rule>
       </rules>
     </rewrite>
