--- a/web.config
+++ b/web.config
@@ -1,15 +1,47 @@
 <configuration>
   <system.webServer>
+    
+    <!-- Configure iisnode -->
+    <iisnode watchedFiles="web.config;*.js" 
+             loggingEnabled="true" 
+             logDirectory="iisnode" 
+             devErrorsEnabled="true" />
+    
     <handlers>
       <add name="iisnode" path="server.js" verb="*" modules="iisnode"/>
     </handlers>
+
     <rewrite>
       <rules>
-        <rule name="NodeApp" patternSyntax="Wildcard">
-          <match url="*" />
+        <!-- Don't interfere with requests for logs -->
+        <rule name="LogFile" patternSyntax="ECMAScript" stopProcessing="true">
+          <match url="iisnode"/>
+          <action type="None" />
+        </rule>
+
+        <!-- First, handle requests for static files -->
+        <rule name="StaticContent">
+          <action type="Rewrite" url="public{REQUEST_URI}"/>
+        </rule>
+        
+        <!-- Redirect all non-static requests to server.js -->
+        <rule name="DynamicContent">
+          <conditions>
+            <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="True"/>
+          </conditions>
           <action type="Rewrite" url="server.js"/>
         </rule>
       </rules>
     </rewrite>
+    
+    <!-- Custom error pages -->
+    <httpErrors>
+      <remove statusCode="404" subStatusCode="-1" />
+      <error statusCode="404" path="/404.html" responseMode="ExecuteURL" />
+      <remove statusCode="500" subStatusCode="-1" />
+      <error statusCode="500" path="/500.html" responseMode="ExecuteURL" />
+    </httpErrors>
+    
   </system.webServer>
 </configuration>
+
