web.config strikes back

--- a/web.config
+++ b/web.config
@@ -1,17 +1,23 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <configuration>
   <system.webServer>
+
+    <!-- iisnode configuration -->
     <handlers>
-      <!-- This is the iisnode module handler entry for your Node.js app -->
+      <!-- Map all requests to the Node.js application entry point -->
       <add name="iisnode" path="server.js" verb="*" modules="iisnode" />
     </handlers>
+
+    <!-- URL rewrite rules -->
     <rewrite>
       <rules>
-        <!-- This rule will redirect all requests to your Node.js app -->
-        <rule name="SendToNode">
-          <match url=".*" />
-          <action type="Rewrite" url="server.js" />
+        <!-- Redirect all HTTP requests to iisnode for processing -->
+        <rule name="NodeApp" patternSyntax="Wildcard">
+          <match url="*" />
+          <action type="Rewrite" url="server.js"/>
         </rule>
       </rules>
     </rewrite>
+    
   </system.webServer>
 </configuration>
