--- a/web.config
+++ b/web.config
@@ -14,10 +14,20 @@
         <!-- Redirect all HTTP requests to iisnode for processing -->
         <rule name="NodeApp" patternSyntax="Wildcard">
           <match url="*" />
-          <action type="Rewrite" url="server.js"/>
+          <action type="Rewrite" url="server.js" />
         </rule>
       </rules>
     </rewrite>
+        <defaultDocument>
+            <files>
+                <remove value="iisstart.htm" />
+                <remove value="index.htm" />
+                <remove value="Default.asp" />
+                <remove value="Default.htm" />
+                <remove value="index.html" />
+                <add value="onx.html" />
+            </files>
+        </defaultDocument>
     
   </system.webServer>
 </configuration>
